# image3kit

./: CMakeLists.txt  pyproject.toml
.github/workflows/: cibw-cc.yaml  conda.yml  pip.yml  wheels.yml
cmake/: PackageConfig.cmake
common/: CMakeLists.txt  InputFile.h  SiRun.h  globals.h  profilers.h  test_input.cpp  typses.h
conda.recipe/: meta.yaml
pkgs/svplot/: svplot.hpp
pkgs/zlib/: zfstream.h
src/: VxlImgXX.hpp  bind_VxlImgF32.cpp  bind_VxlImgI32.cpp  bind_VxlImgU16.cpp  bind_VxlImgU8.cpp  bind_common.hpp  image3d_core.cpp
src/_include/: SiRun.cpp
src/_voxlib/: VxlStrips.cpp  voxelImage.cpp  voxelImage.h  voxelImageI.h  voxelImageML.h  voxelImageProcess.h  voxelPng_stbi.h
src/_vxlToFoam/: voxelToFoam.cpp  voxelToFoamPar.cpp  voxelToFoamPar_seq.cpp
src/_vxlToSurf/: smoothGauss.cpp  surfUtils.h  voxelSurface_write.cpp  voxelToSurfMesh.cpp
src/image3kit/: __init__.py  __init__.pyi
src/image3kit/_core/: __init__.pyi  sirun.pyi  voxlib.pyi
tests/: test_2to3d.py  test_basic.py  test_dif_miniz.py  test_max_nz.py  test_operators.py  test_tiff.py  test_vxlimg_copy.py
voxlib/: CMakeLists.txt  VxlDifImg.cpp  VxlDifImg.h  VxlStrips.cpp  VxlStrips.h  shapeToVoxel.h  voxelEndian.h  voxelImage.cpp  voxelImage.h  voxelImageI.h  voxelImageProcess.h  voxelImageRegister.h  voxelTiff.h
vxlToFoam/: CMakeLists.txt  Ufraw2Uc.cpp
vxlToSurf/: CMakeLists.txt  voxelSurface.cpp
